Commit #7: RecyclerView ListItem refinement - Landscape layout - SavedInstanceState preservation - Activity onCreate bug fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
 
     <!-- TrackListFragment -->
     <string name="track_list_name">TrackListFragment</string>
+    <string name="empty"> </string>
 
     <!-- Settings -->
     <string name="action_settings">Settings</string>
