--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="search_button">Initiate Search</string>
     <string name="input_one_hint">Tag/Artist/Track</string>
     <string name="input_two_hint">Album</string>
+    <string name="title_activity_detail_track">DetailTrackActivity</string>
 </resources>
