Commit #14: DetailTrackActivity layout - MultiScreenSize support (xhdpi/xxxhdpi)(Galaxy Nexus/Nexus 6P) - minSDK 17 / multiDex

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="nav_close">Close navigation drawer</string>
     <string name="nav_title">MyLastFM</string>
     <string name="nav_email" translatable="false">fakeemail@mylastfm.com</string>
+    <string name="app_icon_desc">MyLastFM</string>
 
     <!-- Navigation Drawer Options -->
     <string name="nav_browse">Browse</string>
