--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="action_settings">Settings</string>
     <string name="pref_start_key" translatable="false">pref_startFragment</string>
     <string name="pref_startScreen">Select Start Screen</string>
+    <string name="pref_clear_all">Clear My Playlist</string>
 
     <!-- Search Layout -->
     <string name="search_name">Search Parameters</string>
