--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,7 @@
 
     <!-- ContentProvider -->
     <string name="content_authority">com.fract.nano.williamyoung.mylastfm</string>
+
+    <!-- Widget -->
+    <string name="widget_track">MyLastFM Track Widget</string>
 </resources>
