--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="action_add">Add Track</string>
 
     <!-- ContentProvider -->
-    <string name="content_authority">com.fract.nano.williamyoung.mylastfm</string>
+    <string name="content_authority" translatable="false">com.fract.nano.williamyoung.mylastfm</string>
 
     <!-- Widget -->
     <string name="widget_track">MyLastFM Track Widget</string>
